manifest/gateway-api/argocd-gateway.yaml
---
# Gateway for ArgoCD namespace.
# TLS Secrets are declared explicitly in certificates.yaml.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      hostname: argocd.expmonitor.freeddns.org
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-server-tls
      allowedRoutes:
        namespaces:
          from: Same

    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
